# UniCard

./: .gitignore  CMakeLists.txt
sources/: main.cpp
sources/declarations/Cards/: ArmoredUC.h  CivilUC.h  ICard.h  UniCard.cpp  UniCard.h
sources/declarations/Cards/Components/: Component.h  Passport.h  PayCard.h  Polis.h
sources/declarations/Decorators/: UCBankDecorator.h
sources/implementations/Cards/: ArmoredUC.cpp  CivilUC.cpp  UniCard.cpp
sources/implementations/Cards/Components/: Component.cpp  Passport.cpp  PayCard.cpp  Polis.cpp
sources/tests/: ComponentsTest.h
